partial/force-app/main/default/objects/CPD_Course_Certificate__c/CPD_Course_Certificate__c.object-meta.xml
<CustomObject>
    <label>CPD Course/Certificate</label>
    <nameField>
        <label>CPD Course/Certificate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPD Course/Certificates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>