partial/force-app/main/default/objects/CPD_Course_Certificate__c/fields/CPD_CourseType__c.field-meta.xml
<CustomField>
    <fullName>CPD_CourseType__c</fullName>
    <label>CPD Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic Competency</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>