partial/force-app/main/default/objects/CPD_Course_Certificate__c/fields/CPD_Credits_Attained__c.field-meta.xml
<CustomField>
    <fullName>CPD_Credits_Attained__c</fullName>
    <label>CPD Credits Attained</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>