partial/force-app/main/default/objects/CPD_Course_Certificate__c/fields/Salesperson_Record__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Record__c</fullName>
    <label>Salesperson Record</label>
    <referenceTo>Salesperson_Record__c</referenceTo>
    <relationshipLabel>CPD Course/Certificates</relationshipLabel>
    <relationshipName>CPD_Course_Certificates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>