partial/force-app/main/default/objects/CPD_Course_Certificate__c/validationRules/DateCompletedLaterThanToday.validationRule-meta.xml
<ValidationRule>
    <fullName>DateCompletedLaterThanToday</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Completed__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Completed__c</errorDisplayField>
    <errorMessage>Date Completed cannot be later than Today.</errorMessage>
</ValidationRule>