partial/force-app/main/default/objects/CPD_Course_Certificate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CPD_CourseType__c</columns>
    <columns>CPD_Credits_Attained__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>